--- a/vue/index.html
+++ b/vue/index.html
@@ -11,13 +11,13 @@
 				<div class="play-msg">
 					<h3>YOU</h3>
 					<div class="life">
-						<div class="progress-bar">{{ playerLife }}</div>
+						<div class="progress-bar" :style="playerLife">{{ playerStartLife }}</div>
 					</div>
 				</div>
 				<div class="play-msg">
 					<h3>MONSTER</h3>
 					<div class="life">
-						<div class="progress-bar">{{ monsterLife }}</div>
+						<div class="progress-bar right" :style="monsterLife">{{ monsterStartLife }}</div>
 					</div>
 				</div>
 			</div>
@@ -25,14 +25,13 @@
 				<input type="button" value="START NEW GAME" @click="startGame()"/>
 			</div>
 			<div v-else class="btn">
-				<input type="button" value="ATTACK"/>
+				<input type="button" value="ATTACK" @click="attack()"/>
 				<input type="button" value="BIG ATTACK"/>
 				<input type="button" value="Treatment"/>
 				<input type="button" value="GIVE UP"/>
 			</div>
-			<div class="log">
-				<h5>PLAYER HITS MONSTER FOR 16</h5>
-				<h5>MONSTER HITS PLAYER FOR 18</h5>
+			<div class="log" v-if="attackLogs.length != 0">
+				<h5 v-for="(attackLog,index) in attackLogs" :class="index%2==0?'playerAttackLog':'montherAttackLog'">{{ attackLog }}</h5>
 			</div>
 		</div>
 	</body>
@@ -42,13 +41,42 @@
 			el: '#app',
 			data: {
 				isStart : false,
-				test: [],
-				playerLife: 100,
-				monsterLife: 100
+				attackLogs: [],
+				playerStartLife: 100,
+				monsterStartLife: 100
+			},
+			computed: {
+				playerLife: function(){
+					return {
+						width : this.playerStartLife + '%'
+					}
+				},
+				monsterLife: function(){
+					return {
+						width : this.monsterStartLife + '%'
+					}
+				}
 			},
 			methods: {
 				startGame : function(){
 					this.isStart = true;
+				},
+				attack : function(){
+					var PlayerAttackNum = Math.floor(Math.random()*7+1);
+					var MontherAttackNum = Math.floor(Math.random()*8+1);
+//					console.log(attackNum);
+					this.monsterStartLife -= PlayerAttackNum;
+					if(this.monsterStartLife<=0){
+						this.monsterStartLife = 0;
+						alert("YOU WIN");
+					}
+					this.playerStartLife -= MontherAttackNum;
+					if(this.playerStartLife<=0){
+						this.playerStartLife = 0;
+						alert("YOU LOSS");
+					}
+					this.attackLogs.push("PLAYER HITS MONTHER FOR "+PlayerAttackNum);
+					this.attackLogs.push("MONTHER HITS PLAYER FOR "+MontherAttackNum);
 				}
 			}
 		})
